--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
+  --primary: #bc4123;
+  --secondary: #2b3452;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -16,26 +18,36 @@
 
 body{
   font-family: var(font-family);
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
+  margin: 0;
 }
 
-.root-layout{
-  min-height: 100vh;
-  padding: 0 80px;
+.root-layout {
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 0 40px;
+}
+
+main {
+  margin: 40px 0;
 }
 
 .nav-bar{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 4px 80px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-.title h2{
+.title a h2{
   font-size: calc(1rem + 1.5vw);
   border-bottom: 3px solid red;
+  color: white;
+}
+
+a{
+  text-decoration: none;
 }
 
 .nav-menu{
@@ -64,9 +76,8 @@ body{
 
 .nav{
   display: flex;
-  gap: 50px;
-  margin-top: 40px;
   justify-content: center;
+  gap: 40px;
 }
 
 .nav a{
@@ -103,6 +114,8 @@ color: red;
   flex-direction: column;
   width: 250px;
   height: 200px;
+  color: white;
+  text-decoration: none;
 }
 
 .career:hover{
@@ -110,4 +123,79 @@ color: red;
   border: 2px solid red;
 }
 
+.career-details h3{
+  border-bottom: 3px solid red;
+  display: inline;
+}
+
+.career-details {
+  background-color: rgba(0, 0, 0, 0.2);
+  padding: 5px 10px;
+}
+
+.backButton{
+  text-decoration: none;
+  color: white;
+  border: 2px solid white;
+  border-radius: 5px;
+  padding: 5px 10px;
+  display: inline-block;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.backButton:hover{
+  color: red;
+  border: 2px solid red;
+}
+
+/* breadcrumbs */
+.breadcrumbs {
+  max-width: 1200px;
+  margin: 20px auto;
+  text-transform: capitalize;
+}
+.breadcrumbs > *{
+  display: inline-block;
+  margin-right: 10px;
+}
+.breadcrumbs .crumb:after {
+  content: '>';
+  margin-left: 10px;
+}
+.breadcrumbs .crumb:last-child:after {
+  display: none;
+}
+.breadcrumbs .crumb a {
+  color: #ddd;
+}
+
+/* contact form */
+form {
+  margin-top: 30px;
+}
+form input, form label span, form textarea {
+  display: block;
+}
+form input, form textarea {
+  margin-bottom: 30px;
+  padding: 8px;
+  border-radius: 4px;
+  border: 0;
+  width: 300px;
+  color: var(--secondary);
+}
+form label span {
+  margin-bottom: 10px;
+}
+
+button {
+  border: 0;
+  padding: 8px;
+  border-radius: 4px;
+  color: white;
+  background: var(--primary);
+  cursor: pointer;
+  width: 313px;
+}
 
